[package]
authors = ['LAPO']
description = 'FRAME pallet for custom chainlink logic.'
license = 'Unlicense'
name = 'example-pallet'
edition = '2018'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
sp-std = { default-features = false, version = '2.0.0' }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
# local dependencies
pallet-chainlink = { path = '../../../pallet-chainlink', default-features = false, version = '2.0.0', package  = 'pallet-chainlink'}

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-chainlink/std',
]
