[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-template'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.125", optional = true, features = ["derive"] }
pallet-chainlink-feed = { path = '../../../pallet-chainlink-feed', default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = "3.1.2" }
frame-system = { default-features = false,  git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', optional = true }

[dev-dependencies]
sp-core = {  git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-runtime = {  git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'pallet-chainlink-feed/std'
]
runtime-benchmarks = ['frame-benchmarking']
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
